# FastAPI

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  start.sh
api/: db.py  main.py
api/cruds/: done.py  task.py
api/routers/: done.py  task.py
