[tool.poetry]
name = "demo-app"
version = "0.1.0"
description = ""
authors = ["Akira Kano <a.kano1101@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
fastapi = "^0.111.0"
sqlalchemy = "^2.0.30"
pymysql = "^1.1.0"
aiomysql = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
